--- a/Jint/Jint.csproj
+++ b/Jint/Jint.csproj
@@ -9,10 +9,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+    <AssemblyName>Ultimate.Language.Jint</AssemblyName>
+    <PackageId>Ultimate.Language.Jint</PackageId>
+    <Version>2023.0125.2322.51</Version>
+
   </PropertyGroup>
 
   <ItemGroup>
+    <!--
     <PackageReference Include="Esprima" Version="3.0.0-beta-10" />
+    -->
+    <PackageReference Include="Ultimate.Language.Esprima" Version="2023.125.2257.31" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="all" />
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
   </ItemGroup>
